fixing the size of the productDetail on mobile

--- a/JavaClass/curso-frontend-javascript/css/productDetail.css
+++ b/JavaClass/curso-frontend-javascript/css/productDetail.css
@@ -68,9 +68,10 @@
 
 @media (max-width: 640px) {
     .product-detail-onc {
-        width: 90%;
-        top: 10%;
+        width: 95%;
+        top: 70px;
         left: 10px;
+        right: 10px;
         border-radius: 20px;
     }
     .product-detail-onc > img:nth-child(2) {
@@ -78,5 +79,8 @@
         height: 360px;
         object-fit: cover;
         border-radius:  20px 20px 0 0;
+    }
+    .product-detail-onc-close:hover {
+        cursor: pointer;
     }
 }
